<resources>
    <string name="app_name">Wheelieway</string>
    <string name="etNome">Nome</string>
    <string name="etEmail">E-mail</string>
    <string name="etSenha">Senha</string>
    <string name="etConfSenha">Confirmar Senha</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnEntrar">Entrar</string>
    <string name="tvEntrar">Entrar</string>
    <string name="tvNaoTemUmaConta">Não tem uma conta?</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="mapa_icon_title">Mapa</string>
    <string name="favoritos_icon_title">Favoritos</string>
    <string name="principal_icon_title">Principal</string>
    <string name="perfil_icon_title">Perfil</string>
    <string name="cadastrar_estabelecimento_hint_localização">Coloque sua localização</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastrar_estabelecimento_hint_tipo_estabelecimento">Coloque o tipo do estabelecimento</string>
    <string-array name="tipos_estabelecimento">
        <item>Tipo de Estabelecimento</item>
        <item>Restaurantes</item>
        <item>Padarias</item>
        <item>Cafeterias</item>
        <item>Bares</item>
        <item>Hotéis</item>
        <item>Cinemas</item>
        <item>Shoppings</item>
        <item>Supermercados</item>
        <item>Lojas de Roupa</item>
        <item>Hospitais</item>
        <item>Farmácias</item>
        <item>Academias</item>
        <item>Escolas</item>
        <item>Bibliotecas</item>
        <item>Museus</item>
        <item>Outros</item>
    </string-array>

    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

    <string-array name="Tipo_Logradouro">
        <item>Rua</item>
        <item>Avenida</item>
        <item>Alameda</item>
    </string-array>

</resources>