<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/optHome"
        android:icon="@drawable/ic_home"
        android:title="@string/principal_icon_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/optMap"
        android:icon="@drawable/ic_map"
        android:title="@string/mapa_icon_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/optFav"
        android:icon="@drawable/ic_favorito"
        android:title="@string/favoritos_icon_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/optPerfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/perfil_icon_title"
        app:showAsAction="always" />
</menu>